# Obj_Models_Viewer

./: .gitignore
materials/: topics-list.md  topics-list_RUS.md
src/: CMakeLists.txt  Makefile  dvi.html  main.cc  resource.qrc  viewer.icns
src/controller/: controller.h
src/helpers/: data_objects.h  view_data_objects.h
src/model/: affine.h  base_movement.h  model.cc  model.h  parser.cc  parser.h
src/model/opening/: info.h  normalizer.cc  normalizer.h  parser.cc  parser.h
src/model/processing/: base_movement.cc  base_movement.h  transformer.h
src/tests/: model_test.cc
src/view/: mainwindow.cc  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
src/view/render/: ogl_render.cc  ogl_render.cc.autosave  ogl_render.h
src/view/widgets/: spinbox_slider.cc  spinbox_slider.h  spinbox_slider.ui  widget_actions.cc  widget_actions.h  widget_actions.ui  widget_info.cc  widget_info.h  widget_info.ui  widget_info.ui.autosave  widget_scene.cc  widget_scene.cc.autosave  widget_scene.h  widget_scene.ui  widget_settings.cc  widget_settings.h  widget_settings.ui  widget_settings.ui.autosave  widget_view.cc  widget_view.h  widget_view.ui  widget_view_settings.cc  widget_view_settings.h  widget_view_settings.ui
